# orochi

./: Cargo.toml  README.md
.claude/: settings.local.json
core/: codec.rs
src/: lib.rs  main.rs
src/fndsa/: compression.rs  core.rs  falcon_tree.rs  fft.rs  flr.rs  gaussian.rs  mod.rs  ntru.rs  params.rs  poly.rs  signature.rs  verification.rs
src/fndsa/core/: mq.rs
