[package]
name = "orochi"
version = "0.1.0"
edition = "2021"
authors = ["Quriosity"]
descriotion = "FALCON Digital Signature Algorithm"
keyworks = ["cryptography", "signature", "post-quantum"]
licence = "MIT"


[dependencies]
rand_core = "0.6.4"
cpufeatures = { version = "0.2.5", optional = true }

[dev-dependencies]
hex = "0.4.3"
criterion = "0.4"

[features]
default = ["cpufeatures"]
no_avx2 = []
shake256x4 = []

